--- a/charts/my-spring-boot-demo/Makefile
+++ b/charts/my-spring-boot-demo/Makefile
@@ -1,6 +1,6 @@
 CHART_REPO := http://jenkins-x-chartmuseum:8080
 CURRENT=$(pwd)
-NAME := 
+NAME := my-spring-boot-demo
 OS := $(shell uname)
 RELEASE_VERSION := $(shell cat ../../VERSION)
 
